--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
+
+/* #tsparticles {
+  position: absolute;
+  display: block;
+} */
